# rollupc

./: .gitignore  README.md  pyproject.toml
src/rollupc/: __init__.py  exceptions.py  main.py
src/rollupc/providers/: aws_kms.py  base.py
tests/providers/: test_aws_kms.py
