[project]
name = "rollupc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladislav Polskikh", email = "v.polskikh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.4",
    "cryptography>=45.0.5",
    "eth-hash[pycryptodome]>=0.7.1",
    "eth-utils>=5.3.0",
    "typer>=0.16.0",
]

[project.scripts]
rollupc = "rollupc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "rollupc",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.39.4",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
